--- a/studentprofile2/src/App.css
+++ b/studentprofile2/src/App.css
@@ -63,7 +63,7 @@
   margin-top: 20px;
 }
 
-button {
+.Contact button  {
   height: 40px;
   width: 126px;
   background-color: #3C2752;
@@ -105,6 +105,24 @@ color: red;
   border-color: lightgrey;
   border-style: solid;
   margin-left: 50px;
+ }
+
+.Upcoming input {
+  display: inline-block;
+  margin-right: 8px;
+  height: 22px;
+  margin-bottom: 2px;
+  margin-top: 10px;
+}
+
+.Upcoming button {
+  display: inline-block;
+  height: 30px;
+  width: 90px;
+  background-color: #3C2752;
+  border-color: white;
+  color: white;
+  font-size: 20px;
 }
 
 .PastDue {
@@ -140,7 +158,7 @@ color: red;
 
 
 .FirstReact {
-  height: 50px;
+  height: 100px;
   width: 350px;
   background-color: lightgrey;
   border-color: lightgrey;
@@ -152,7 +170,7 @@ color: red;
   background-color: lightgrey;
   display: inline-block;
   float: right;
-  height: 50px;
+  height: 100px;
   width: 350px;
   border-color: lightgrey;
   border-style: solid;
@@ -161,7 +179,7 @@ color: red;
 
 .SecondReact {
   background-color: lightgrey;
-  height: 50px;
+  height: 100px;
   width: 350px;
   border-color: lightgrey;
   border-style: solid;
@@ -172,7 +190,7 @@ color: red;
   background-color: lightgrey;
   display: inline-block;
   float: right;
-  height: 50px;
+  height: 100px;
   width: 350px;
   border-color: lightgrey;
   border-style: solid;
