--- a/studentprofile2/src/App.css
+++ b/studentprofile2/src/App.css
@@ -1,4 +1,4 @@
-.StudentProfile {
+/*.StudentProfile {
   background-color: #9B9B9B;
   position: relative;
   top: 0;
@@ -196,3 +196,4 @@ color: red;
   border-style: solid;
   margin-right: 50px;  
 }
+*/
